# FedVibroSense_STM32

./: CMakeLists.txt  Makefile  README.md
Core/Inc/: ComplementaryFilter.h  Config.h  FeatureExtractor.h  FederatedClient.h  MPU6050.h  NeuralNetwork.h  Serialization.h  Utils.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: ComplementaryFilter.c  FeatureExtractor.c  FederatedClient.c  MPU6050.c  NeuralNetwork.c  Serialization.c  Utils.c  main.c  stm32f4xx_it.c
STM32CubeMX/: CubeMX_Config_Guide.txt  STM32F405RGTx_FLASH.ld
cmake/: arm-none-eabi.cmake
